Random background and CSS layout bugfixes.

--- a/app/styles/parts/global.scss
+++ b/app/styles/parts/global.scss
@@ -18,7 +18,6 @@ body {
 }
 
 .site-background {
-  background-image: url(../../../public/images/lunchmemo-bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
